--- a/index.html
+++ b/index.html
@@ -9,28 +9,33 @@
   </head>
   <body>
 
-    <div class="inicio"> 
-      <h1 class="titulo">Ahorcado</h1>
-      <button class="btn" id="iniciar-juego">Iniciar juego</button> <br>
-      <button class="btn" id="displayInputPalabra">Agregue una nueva palabra.</button>
-    </div>
+      <div class="inicio"> 
+        <h1 class="titulo">Ahorcado</h1>
+        <button class="btn" id="iniciar-juego">Iniciar juego</button> <br>
+        <button class="btn" id="displayInputPalabra">Agregue una nueva palabra.</button>
+      </div>
 
-    <div class="ingreso-palabra">
-      <input class="text-input" type="text" id="input-nueva-palabra" placeholder="Escriba una nueva palabra aquí.">
-      <button class="btn" id="nueva-palabra">Guardar y Empezar</button> 
-      <button class="btnblanco" id="cancelar">Cancelar</button>
-    </div>
+          <div class="ingreso-palabra">
+            <input class="text-input" type="text" id="input-nueva-palabra" placeholder="Escriba una nueva palabra aquí.">
+            <button class="btn" id="nueva-palabra">Guardar</button> 
+            <button class="btn" id="comenzar">Comenzar</button> 
+            <button class="btnblanco" id="cancelar">Cancelar</button>
+          </div>
 
-    <div class="juego">
-      <input class="letra" type="text" id="letra-ingresada" placeholder="Escriba una letra aquí.">
-      <button class="btn" id="comprobar">Comprobar letra</button> 
-      <input class="mascara" type="text" id="input-mascara" readonly="true"> 
-      <button class="btnblanco" id="salir">  Salir  </button>
-    </div>
+      <div class="juego">
+        <input class="letras" type="text" id="letra" readonly="true" placeholder="Letra ingresada...">
+        <button class="btn" id="comprobar">Comprobar letra</button> 
+        <input class="mascara" type="text" id="input-mascara" readonly="true">
+                <div class="letter">
+                     <div class="teclado" id="letras"></div>
+                </div>
+        <button class="btnblanco" id="salir">Salir</button>
+      </div>
 
     <div class="juego">
       <canvas id="ahorcado" height="800px" width="1200px"></canvas>
     </div>
+
     <script type="text/javascript" src="js/canvas.js"></script>
     <script type="text/javascript" src="js/ahorcado.js"></script>
     <script type="text/javascript" src="js/displays.js"></script>
