--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </div>
 
       <div class="juego">
-        <input class="letras" type="text" id="letra" readonly="true" placeholder="Letra ingresada...">
+        <input class="letras" type="text" id="letra" readonly="true" placeholder="Ingrese una letra con el teclado virtual">
         <button class="btn" id="comprobar">Comprobar letra</button> 
         <input class="mascara" type="text" id="input-mascara" readonly="true">
                 <div class="letter">
