--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
                   <input class="letras" type="text" id="letra" readonly="true" placeholder="Ingrese una letra con el teclado virtual">
                   <input class="errores" type="text" id="error" readonly="true"placeholder="Letras ingresadas"><button class="btn" id="comprobar">Comprobar letra</button>
                   <input class="mascara" type="text" id="input-mascara" readonly="true">
-                  <canvas id="ahorcado" width="400px" height="100px"></canvas>
-            </div>
-            <div>
+            </div> 
+            
+            <div class="blockTwo">
                   <div class="letter">
-                          <div class="teclado" id="letras"></div>
+                    <canvas id="ahorcado" width="400px" height="100px"></canvas>
+                    <div class="teclado" id="letras"></div>
                   </div>
               <button class="btnblanco" id="salir">Salir</button>
             </div>
